Converting jshell to use Stream.toList